appraisal modified