@@ -1,15 +1,17 @@
 package ace.org.epms_backend.service.impl;
 
-import ace.org.epms_backend.dto.appraisal.form.*;
+import ace.org.epms_backend.dto.appraisal.*;
 import ace.org.epms_backend.enums.QuestionType;
 import ace.org.epms_backend.exception.NotFoundException;
 import ace.org.epms_backend.model.appraisal.*;
 import ace.org.epms_backend.repository.*;
 import ace.org.epms_backend.service.AppraisalFormService;
+import ace.org.epms_backend.service.AuthService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,16 +21,26 @@ public class AppraisalFormServiceImpl implements AppraisalFormService {
     private final AppraisalFormRepository formRepository;
     private final FormCategoryRepository categoryRepository;
     private final QuestionRepository questionRepository;
+    private final AppraisalCycleRepository cycleRepository;
+    private final AuthService authService;
 
     @Override
     @Transactional
     public Long createForm(AppraisalFormRequest request) {
-        AppraisalForm form = AppraisalForm.builder()
-                .formName(request.getFormName())
-                .formType(request.getFormType())
-                .build();
+        AppraisalForm form = new AppraisalForm();
+        form.setFormName(request.getFormName());
+        form.setFormType(request.getFormType());
+        
+        if (request.getCycleId() != null) {
+            AppraisalCycle cycle = cycleRepository.findById(request.getCycleId())
+                    .orElseThrow(() -> new NotFoundException("Cycle not found"));
+            form.setCycle(cycle);
+        }
+
+        form.setCreatedBy(authService.getCurrentUser().getId());
         return formRepository.save(form).getFormId();
     }
+
 
     @Override
     @Transactional
@@ -36,11 +48,10 @@ public class AppraisalFormServiceImpl implements AppraisalFormService {
         AppraisalForm form = formRepository.findById(formId)
                 .orElseThrow(() -> new NotFoundException("Form not found"));
         
-        FormCategory category = FormCategory.builder()
-                .form(form)
-                .categoryName(request.getCategoryName())
-                .isActive(true)
-                .build();
+        FormCategory category = new FormCategory();
+        category.setForm(form);
+        category.setCategoryName(request.getCategoryName());
+        category.setIsActive(true);
         categoryRepository.save(category);
     }
 
@@ -50,13 +61,12 @@ public class AppraisalFormServiceImpl implements AppraisalFormService {
         FormCategory category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new NotFoundException("Category not found"));
 
-        Question question = Question.builder()
-                .category(category)
-                .questionText(request.getQuestionText())
-                .questionType(QuestionType.valueOf(request.getQuestionType()))
-                .isRequired(request.getIsRequired())
-                .isActive(true)
-                .build();
+        Question question = new Question();
+        question.setCategory(category);
+        question.setQuestionText(request.getQuestionText());
+        question.setQuestionType(QuestionType.valueOf(request.getQuestionType()));
+        question.setIsRequired(request.getIsRequired());
+        question.setIsActive(true);
         questionRepository.save(question);
     }
 
@@ -65,29 +75,67 @@ public class AppraisalFormServiceImpl implements AppraisalFormService {
         AppraisalForm form = formRepository.findById(formId)
                 .orElseThrow(() -> new NotFoundException("Form not found"));
 
-        FullFormResponse response = new FullFormResponse();
-        response.setFormId(form.getFormId());
-        response.setFormName(form.getFormName());
-        response.setFormType(form.getFormType());
+        List<FormCategory> categories = categoryRepository.findByForm_FormId(formId);
+        List<Question> allQuestions = questionRepository.findByCategory_Form_FormId(formId);
 
-        response.setCategories(categoryRepository.findByForm_FormId(formId).stream()
-                .map(cat -> {
-                    CategoryResponse cr = new CategoryResponse();
-                    cr.setCategoryId(cat.getCategoryId());
-                    cr.setCategoryName(cat.getCategoryName());
-                    cr.setQuestions(questionRepository.findByCategory_CategoryId(cat.getCategoryId()).stream()
-                            .map(q -> {
-                                QuestionResponse qr = new QuestionResponse();
-                                qr.setQuestionId(q.getQuestionId());
-                                qr.setQuestionText(q.getQuestionText());
-                                qr.setQuestionType(q.getQuestionType().name());
-                                qr.setIsRequired(q.getIsRequired());
-                                return qr;
-                            }).collect(Collectors.toList()));
-                    return cr;
-                }).collect(Collectors.toList()));
+        List<CategoryDTO> categoryDTOs = categories.stream().map(cat -> {
+            List<QuestionDTO> questionDTOs = allQuestions.stream()
+                    .filter(q -> q.getCategory().getCategoryId().equals(cat.getCategoryId()))
+                    .map(q -> QuestionDTO.builder()
+                            .questionId(q.getQuestionId())
+                            .questionText(q.getQuestionText())
+                            .questionType(q.getQuestionType() != null ? q.getQuestionType().name() : null)
+                            .isRequired(q.getIsRequired())
+                            .build())
+                    .toList();
 
-        return response;
+            return CategoryDTO.builder()
+                    .categoryId(cat.getCategoryId())
+                    .categoryName(cat.getCategoryName())
+                    .questions(questionDTOs)
+                    .build();
+        }).toList();
+
+        return FullFormResponse.builder()
+                .formId(form.getFormId())
+                .formName(form.getFormName())
+                .formType(form.getFormType())
+                .categories(categoryDTOs)
+                .build();
+    }
+
+    @Override
+    @Transactional
+    public Long cloneForm(Long formId) {
+        AppraisalForm originalForm = formRepository.findById(formId)
+                .orElseThrow(() -> new NotFoundException("Original form not found"));
+
+        AppraisalForm newForm = new AppraisalForm();
+        newForm.setFormName(originalForm.getFormName() + " (Copy)");
+        newForm.setFormType(originalForm.getFormType());
+        AppraisalForm savedForm = formRepository.save(newForm);
+
+        List<FormCategory> originalCategories = categoryRepository.findByForm_FormId(formId);
+        for (FormCategory origCat : originalCategories) {
+            FormCategory newCat = new FormCategory();
+            newCat.setForm(savedForm);
+            newCat.setCategoryName(origCat.getCategoryName());
+            newCat.setIsActive(origCat.getIsActive());
+            FormCategory savedCat = categoryRepository.save(newCat);
+
+            List<Question> originalQuestions = questionRepository.findByCategory_CategoryId(origCat.getCategoryId());
+            for (Question origQ : originalQuestions) {
+                Question newQ = new Question();
+                newQ.setCategory(savedCat);
+                newQ.setQuestionText(origQ.getQuestionText());
+                newQ.setQuestionType(origQ.getQuestionType());
+                newQ.setIsRequired(origQ.getIsRequired());
+                newQ.setIsActive(origQ.getIsActive());
+                questionRepository.save(newQ);
+            }
+        }
+
+        return savedForm.getFormId();
     }
 
     @Override
@@ -95,6 +143,6 @@ public class AppraisalFormServiceImpl implements AppraisalFormService {
     public void updateFormStatus(Long formId, Boolean isActive) {
         AppraisalForm form = formRepository.findById(formId)
                 .orElseThrow(() -> new NotFoundException("Form not found"));
-        // Assuming we add isActive to AppraisalForm or just handle it here
+        // Assuming we add logic if we have isActive on form
     }
 }
